src/styles/base/_typography.scss
@use '../abstracts/mixins' as mx;

@font-face {
  font-family: 'Inter';
  src: url('../../../public/fonts/inter.ttf') format('truetype-variations');
  font-weight: 100 900;
  font-style: normal;
}

.text-regular {
  font-weight: 400;
}

.text-semibold {
  font-weight: 600;
}

.text-bold {
  font-weight: 700;
}

body {
  font-family: 'Inter', sans-serif;
}

button {
  font-size: 20px;
}

.btn-primary {
  font-weight: 700;
}

p {
  font-size: 16px;
  font-weight: 400;
  margin: 0;
}

span {
  @include mx.fluid-text(16, 20);
  font-weight: 400;
}

h2 {
  @include mx.fluid-text(38, 60);
  font-weight: 700;
  margin: 0;
}

h3 {
  font-size: 30px;
  font-weight: 700;
  margin: 0;
}

h4 {
  @include mx.fluid-text(19, 27);
  font-weight: 400;
}

